--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solar Sentinel - UV Index Monitor</title>
+    <title>Solar Sentinel</title>
     
     <!-- PWA Meta Tags -->
     <meta name="description" content="Real-time UV index monitoring with location detection">
@@ -20,10 +20,10 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="bg-gray-50 min-h-screen">
-    <div class="container mx-auto px-4 py-8 md:px-4">
-        <header class="text-center mb-8">
-            <h1 class="text-3xl font-bold text-gray-800 mb-2">Solar Sentinel</h1>
-            <p id="location-display" class="text-gray-600">📍 UV Index Monitor - Getting location...</p>
+    <div class="container mx-auto max-w-4xl">
+        <header class="flex items-center justify-between mb-6">
+            <img src="/logo.png" alt="Solar Sentinel" class="h-32 w-auto">
+            <p id="location-display" class="text-gray-600 text-sm">📍 Getting location...</p>
         </header>
 
         <div class="max-w-4xl mx-auto">
@@ -164,7 +164,7 @@
                 // Update location display with icon
                 const locationIcon = currentLocation.isUserLocation ? '📍 ' : '';
                 document.getElementById('location-display').textContent = 
-                    `UV Index Monitor - ${locationIcon}${currentLocation.name}`;
+                    `${locationIcon}${currentLocation.name}`;
 
                 // Fetch UV data for current location
                 const url = `/api/uv-today?lat=${currentLocation.lat}&lon=${currentLocation.lon}`;
