--- a/public/index.html
+++ b/public/index.html
@@ -798,7 +798,7 @@
                 const url = `/api/uv-today?lat=${currentLocation.lat}&lon=${currentLocation.lon}&date=${date}`;
                 const { json: data, res } = await fetchWithDebug('uv-today', url, (silent ? 'auto-refresh' : 'loadUVData'));
 
-                if (!response.ok) {
+                if (!res.ok) {
                     throw new Error(data.error || 'Failed to load UV data');
                 }
 
